Update and rename AppNamePortable.ini to TorBrowserPortable.ini

--- a/App/AppInfo/Launcher/TorBrowserPortable.ini
+++ b/App/AppInfo/Launcher/TorBrowserPortable.ini
@@ -7,7 +7,7 @@
 [Launch]
 ;This section details how an app is started and where it works
 ;ProgramExecutable is the EXE to run to start the app relative to the AppNamePortable\App directory
-ProgramExecutable=AppName\AppName.exe
+ProgramExecutable=TorBrowser\firefox.exe
 ;ProgramExecutable64 is an optional EXE to run if running on Windows 64-bit
 ;ProgramExecutable64=AppName\AppName64.exe
 ;CommandLineArguments is an optional setting that will cause the above EXE to be launched with this string passed
