--- a/App/AppInfo/appinfo.ini
+++ b/App/AppInfo/appinfo.ini
@@ -7,26 +7,26 @@
 [Format]
 ;This section is used by the PortableApps.com Installer and does not normally need to be edited
 Type=PortableAppsFormat
-Version=3.4
+Version=3.5
 
 [Details]
 ;The app details that will be shown to the user and used by the PortableApps.com Platform
 ;Name is the name of the app. Generally the normal name of the app with " Portable" added to the end
-Name=AppName Portable
+Name=Tor Browser Portable
 ;AppId is a unique id used by the Platform's updater and app store as well as the Installer
-AppId=AppNamePortable
+AppId=TorBrowserPortable
 ;Publisher includes the name of the original publisher and the organization packaging if different
-Publisher=AppName Team & PortableApps.com
+Publisher=Tor Project & PortableApps.com
 ;Homepage is the URL of the portable app's homepage which may differ from the app's main homepage
 Homepage=PortableApps.com/Development
 ;Donate is the URL for donations to contribute money to help with development
 ;Donate=AppName.com/donations
 ;Category is the type of app. It is used by the Platform for organization.  Valid entries are: Accessibility, Development, Education, Games, Graphics & Pictures, Internet, Music & Video, Office, Security or Utilities. Only these exact entries are accepted
-Category=Utilities
+Category=Internet
 ;Description is a short description of the app. The app name should be omitted.  Examples include: "Web browser", "Email client", etc
-Description=An example app
+Description=Browse the web anonymously, without anyone spying on you.
 ;Language indicates how the installer will be built.  If a single language, the installer will be built in that language.  If Multilingual, a standard installer with all languages will be built. Generally, only Multilingual or English apps are released by PortableApps.com.  A full list of languages is available
-Language=Multilingual
+Language=English
 
 [License]
 ;This section includes licensing details on the bundled app.
@@ -50,9 +50,9 @@ CommercialUse=true
 
 [Version]
 ;PackageVersion is used by the installer and the updater.  It must be in dotted quad X.X.X.X format for use by Windows.  You must ensure that each successive version has a higher package version than the previous or it will not be treated as a newer version by the platform's updater. Generally, the PackageVersion is based on the DisplayVersion.  So an app with version 3.4 will have a package version of 3.4.0.0.
-PackageVersion=3.4.0.0
+PackageVersion=7.5.5.991
 ;DisplayVersion is displayed to the user and used in naming the installer
-DisplayVersion=3.4
+DisplayVersion=7.5.6 Dev Test 1
 ;Some example Display and Package versions
 ;3.4 would be 3.4.0.0
 ;4.5a would be 4.5.1.0
