--- a/App/AppInfo/appinfo.ini
+++ b/App/AppInfo/appinfo.ini
@@ -16,9 +16,9 @@ Name=Tor Browser Portable
 ;AppId is a unique id used by the Platform's updater and app store as well as the Installer
 AppId=TorBrowserPortable
 ;Publisher includes the name of the original publisher and the organization packaging if different
-Publisher=AppName Team & PortableApps.com
+Publisher=Tor Project Team & PortableApps.com
 ;Homepage is the URL of the portable app's homepage which may differ from the app's main homepage
-Homepage=PortableApps.com/Development
+Homepage=https://portableapps.com/node/58825
 ;Donate is the URL for donations to contribute money to help with development
 ;Donate=AppName.com/donations
 ;Category is the type of app. It is used by the Platform for organization.  Valid entries are: Accessibility, Development, Education, Games, Graphics & Pictures, Internet, Music & Video, Office, Security or Utilities. Only these exact entries are accepted
@@ -50,9 +50,9 @@ CommercialUse=true
 
 [Version]
 ;PackageVersion is used by the installer and the updater.  It must be in dotted quad X.X.X.X format for use by Windows.  You must ensure that each successive version has a higher package version than the previous or it will not be treated as a newer version by the platform's updater. Generally, the PackageVersion is based on the DisplayVersion.  So an app with version 3.4 will have a package version of 3.4.0.0.
-PackageVersion=7.5.5.991
+PackageVersion=7.5.5.992
 ;DisplayVersion is displayed to the user and used in naming the installer
-DisplayVersion=7.5.6 Dev Test 1
+DisplayVersion=7.5.6 Dev Test 2
 ;Some example Display and Package versions
 ;3.4 would be 3.4.0.0
 ;4.5a would be 4.5.1.0
