--- a/App/AppInfo/Launcher/TorBrowserPortable.ini
+++ b/App/AppInfo/Launcher/TorBrowserPortable.ini
@@ -9,7 +9,7 @@
 ;ProgramExecutable is the EXE to run to start the app relative to the AppNamePortable\App directory
 ProgramExecutable=Browser\firefox.exe
 ;ProgramExecutable64 is an optional EXE to run if running on Windows 64-bit
-;ProgramExecutable64=Browser64\firefox.exe
+ProgramExecutable64=Browser64\firefox.exe
 ;CommandLineArguments is an optional setting that will cause the above EXE to be launched with this string passed
 ;CommandLineArguments=-settings=%PAL:DataDir%\
 ;DirectoryMoveOK indicates whether a directory can be moved to a different path rather than just supporting drive letter changes
