update to dev test 5

--- a/App/AppInfo/appinfo.ini
+++ b/App/AppInfo/appinfo.ini
@@ -26,7 +26,7 @@ Category=Internet
 ;Description is a short description of the app. The app name should be omitted.  Examples include: "Web browser", "Email client", etc
 Description=Tor Browser Portable is a portablized version of the Tor Browser, which allows for truly anonymous browsing.
 ;Language indicates how the installer will be built.  If a single language, the installer will be built in that language.  If Multilingual, a standard installer with all languages will be built. Generally, only Multilingual or English apps are released by PortableApps.com.  A full list of languages is available
-Language=English
+Language=Multilingual
 
 [License]
 ;This section includes licensing details on the bundled app.
@@ -50,9 +50,9 @@ CommercialUse=true
 
 [Version]
 ;PackageVersion is used by the installer and the updater.  It must be in dotted quad X.X.X.X format for use by Windows.  You must ensure that each successive version has a higher package version than the previous or it will not be treated as a newer version by the platform's updater. Generally, the PackageVersion is based on the DisplayVersion.  So an app with version 3.4 will have a package version of 3.4.0.0.
-PackageVersion=8.0.3.994
+PackageVersion=8.0.3.995
 ;DisplayVersion is displayed to the user and used in naming the installer
-DisplayVersion=8.0.4 Dev Test 4
+DisplayVersion=8.0.4 Dev Test 5
 ;Some example Display and Package versions
 ;3.4 would be 3.4.0.0
 ;4.5a would be 4.5.1.0
